NLB-Ingress/nginx_controller.yaml
apiVersion: v1
kind: Service
metadata: 
  annotations: 
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: ssl
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:{REGION}-1:{ACCOUNT-ID}:certificate/{ID}}"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels: 
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  name: ingress-nginx
  namespace: ingress-nginx
spec: 
  externalTrafficPolicy: Local
  ports: 
    - 
      name: http
      port: 80
      targetPort: http
    - 
      name: https
      port: 443
      targetPort: https
  selector: 
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  type: LoadBalancer
