NLB-Ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  annotations: 
      ingress.kubernetes.io/ssl-redirect: "true"
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
  name: dashboard
spec: 
    rules: 
      - 
        http: 
          paths: 
            - 
              backend: 
                serviceName: nginx
                servicePort: 80
              path: /nginx
